# snap_qt

./: .gitignore  snapcraft.yaml
my_package/: CMakeLists.txt  package.xml
my_package/launch/: my_package.launch.py
snap/gui/: gui.desktop
src/gui/: CMakeLists.txt  README.md  package.xml
src/gui/launch/: gui.launch.py
src/gui/src/: main.cpp
src/gui/src/qml/: main.qml
src/my_package/: CMakeLists.txt  README.md
src/my_package/launch/: my_package.launch.py
